hphp/hack/test/typecheck/expression_trees/parse_constants.php.exp
File "parse_constants.php", line 32, characters 17-24:
Unsupported syntax for expression trees. (Parsing[1002])
